tests/paczka1/fuzzy1/99671737.err
Error in line 2: 31Di S697 74,6
Error in line 10: ftZXhqwAW0A S183 81,9
Error in line 12: ftZXhqwAW0A A466 49,1
Error in line 25: ftZXhqwAW0A A466 79,5
